# telegram-bot-gastos-llm

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
src/: __init__.py  config.py  main.py
src/bot/: __init__.py  telegram_handler.py
src/llm/: __init__.py  base.py  factory.py  gemini_client.py  ollama_client.py  prompt_builder.py
src/storage/: __init__.py  sheets_client.py
src/utils/: exceptions.py  logger.py  validators.py
systemd/: telegram-bot-gastos-llm.service.template
